GPC/tests/examples/fail/duplicateArgNames.gpc


int GPRM::Test::duplicateArgNames(int a, int a) {
    return 1;
}
